Updated grid to include offsets, fixed first column margin issue by shifting row with a negative margin, switched to desktop first layout.

--- a/css/base.css
+++ b/css/base.css
@@ -88,14 +88,12 @@ body {
 	background: #9bbfcf;
 	color: #fff;
 	font-family: sans-serif;
-	height: 36px;
 	text-align: center;
 }
 .nested-2x {
 	background: #c7e2ee;
 	color: #fff;
 	font-family: sans-serif;
-	height: 36px;
 	text-align: center;
 }
 
